--- a/app/src/assets/sass/style.scss
+++ b/app/src/assets/sass/style.scss
@@ -3,6 +3,7 @@
     top: 0;
     bottom: 0;
     width: 100%;
+    display: none;
 }
 .marker {
     background-image: url('../img/mapbox-icon.png');
